--- a/.github/workflows/link-milestone.yaml
+++ b/.github/workflows/link-milestone.yaml
@@ -1,14 +1,17 @@
 ---
 name: Link Milestone
 on:
-  pull_request_target:
-    branches: [main]
-    types: ['closed']
+  workflow_run:
+    workflows: ['Link Milestone Upload PR Number']
+    types:
+      - completed
 
 jobs:
   link-milestone:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    if: >
+      ${{ github.event.workflow_run.event == 'pull_request' &&
+      github.event.workflow_run.conclusion == 'success' }}
     strategy:
       fail-fast: true
     permissions:
@@ -16,13 +19,17 @@ jobs:
       pull-requests: write
       issues: write
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: pr
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.7'
       - run: |
+          export PR_NUMBER=$(cat ./pr/nr)
           go install github.com/stephybun/link-milestone@latest
           link-milestone
         env:
-          PR_NUMBER: ${{ github.event.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPO: ${{ github.repository }}
