--- a/.github/workflows/link-milestone.yaml
+++ b/.github/workflows/link-milestone.yaml
@@ -39,12 +39,13 @@ jobs:
             });
             var fs = require('fs');
             fs.writeFileSync('${{github.workspace}}/pr.zip', Buffer.from(download.data));
-      - run: unzip pr.zip
+      - run: |
+          unzip pr.zip
+          echo "{PR_NUMBER}=$(cat nr)" >> $GITHUB_ENV
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.7'
       - run: |
-          export PR_NUMBER=$(cat nr)
           go install github.com/stephybun/link-milestone@latest
           link-milestone
         env:
