--- a/.github/workflows/link-milestone-upload-pr.yaml
+++ b/.github/workflows/link-milestone-upload-pr.yaml
@@ -1,7 +1,29 @@
+# ---
+# name: Link Milestone Upload PR Number
+# on:
+#   pull_request:
+#     branches: [main]
+#     types: ['closed']
+
+# jobs:
+#   link-milestone:
+#     if: github.event.pull_request.merged == true
+#     runs-on: ubuntu-latest
+#     strategy:
+#       fail-fast: true
+#     steps:
+#       - run: |
+#           mkdir -p ./pr
+#           echo ${{ github.event.number }} > ./pr/nr
+#       - uses: actions/upload-artifact@v2
+#         with:
+#           name: pr
+#           path: pr/
+
 ---
-name: Link Milestone Upload PR Number
+name: Link Milestone
 on:
-  pull_request:
+  pull_request_target:
     branches: [main]
     types: ['closed']
 
@@ -11,11 +33,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     steps:
-      - run: |
-          mkdir -p ./pr
-          echo ${{ github.event.number }} > ./pr/nr
-      - uses: actions/upload-artifact@v2
+      - uses: actions/setup-go@v2
         with:
-          name: pr
-          path: pr/
+          go-version: '1.17.3'
+      - run: |
+          go install github.com/stephybun/link-milestone@latest
+          link-milestone
+        env:
+          PR_NUMBER: ${{ github.event.number }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPO: ${{ github.repository }}
